--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@sveltejs/svelte-scroller": "^2.0.7",
     "@types/d3": "^7.4.3",
-    "d3": "^7.8.5"
+    "chart.js": "^4.4.3",
+    "d3": "^7.8.5",
+    "gsap": "^3.12.5",
+    "scrollmagic": "^2.0.8"
   }
 }
